<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portadafrica"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/slogan5"
        android:textAlignment="center"
        android:textColor="@color/Clear_Bck"
        android:textSize="39sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="66dp"
        android:layout_height="73dp"
        android:text="@string/slogan6"
        android:textAlignment="center"
        android:textColor="@color/Clear_Bck"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textView10"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="49dp"
        android:layout_height="51dp"
        android:text="@string/slogan4"
        android:textAlignment="center"
        android:textColor="@color/Clear_Bck"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:text="@string/slogan3"
        android:textAlignment="center"
        android:textColor="@color/Clear_Bck"
        android:textSize="39sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="120dp"
        android:layout_height="33dp"
        android:text="@string/slogan1"
        android:textAlignment="center"
        android:textColor="@color/Clear_Bck"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="45dp"
        android:layout_height="36dp"
        android:text="@string/slogan2"
        android:textAlignment="center"
        android:textColor="@color/Clear_Bck"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/botonComenzar"
        android:layout_width="146dp"
        android:layout_height="68dp"
        android:backgroundTint="@color/Obscure"
        android:text="@string/comenzar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.475" />

</androidx.constraintlayout.widget.ConstraintLayout>