<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/juego"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/muli_extrabold"
        android:text="@string/otro"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <ImageButton
        android:id="@+id/btnJugar"
        android:layout_width="119dp"
        android:layout_height="109dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:background="@null"
        android:scaleX="3"
        android:scaleY="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.565"
        app:srcCompat="@drawable/afribot" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/muli_extrabold"
        android:text="@string/introduzca"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.416" />

    <TextView
        android:id="@+id/txtPais"
        android:layout_width="124dp"
        android:layout_height="39dp"
        android:fontFamily="@font/muli_extrabold"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.569" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="180dp"
        android:layout_height="320dp"
        android:layout_marginTop="9dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:buttonTint="@color/Coral"
            android:fontFamily="@font/muli_extrabold"
            android:text="RadioButton"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:buttonTint="@color/Coral"
            android:fontFamily="@font/muli_extrabold"
            android:text="RadioButton"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:buttonTint="@color/Coral"
            android:fontFamily="@font/muli_extrabold"
            android:text="RadioButton"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:buttonTint="@color/Coral"
            android:fontFamily="@font/muli_extrabold"
            android:text="RadioButton"
            android:textSize="24sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="264dp"
        android:layout_height="131dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="122dp"
        android:contentDescription="@string/descripcion_imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/africamap" />

</androidx.constraintlayout.widget.ConstraintLayout>